--- a/style.css
+++ b/style.css
@@ -640,10 +640,11 @@ canvas {
   }
 }
 .work-section {
-  /* background-color: var(--light);
-  color: var(--dark); */
+  background-color: var(--light);
+  color: var(--dark);
   position: relative;
   margin: 0 auto;
+
 }
 .work-section h2 {
   text-align: center;
@@ -682,7 +683,7 @@ canvas {
           align-items: center;
   margin: 0 auto;
   position: relative;
-  width: 90%;
+  /* width: 90%; */
   max-width: 1600px;
   margin-bottom: 3em;
 }
@@ -716,11 +717,11 @@ canvas {
   margin-right: 0.5em;
 }
 .work-section .project .project-img {
-  position: relative;
+  /* position: relative; */
   cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  /* display: -webkit-box;
+  display: -ms-flexbox; */
+  
 }
 .work-section .project .project-img:nth-child(2) {
   -webkit-box-pack: end;
@@ -738,6 +739,44 @@ canvas {
         -ms-flex-order: -1;
             order: -1;
   }
+  
+  .project .project0{
+    display: flex;
+    flex-direction: column;
+  }
+  /* .project-img-wrapper{
+    margin-top: 0.1vh;
+    height: 100%;
+    width: 100%;
+    background-color: red;
+    object-fit: contain;
+    display: flex;
+  } */
+  .project-img{
+    padding: 0%;
+    margin: 0%;
+    height: 46vh;
+    width: 80vw;
+    object-fit: contain;
+    position: relative;
+    /* background-color: rgb(34, 187, 70); */
+    overflow: hidden;
+  }
+  .project-img img{
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  .project-details{
+    box-shadow: 0 4px 10px rgb(255, 255, 255);
+    margin: 3px;
+    /* background-color: #1595b6; */
+  }
 }
 .work-section .project .project-img a {
   display: -webkit-box;
@@ -746,4 +785,137 @@ canvas {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.project-img-wrapper {
+  margin-top: 6vh;
+  height: 60vh;
+  width: 33vw;
+  /* background-color: red; */
+  object-fit: cover;
+  display: flex;
+  overflow: hidden;
+  /* box-shadow: 8px 17px 38px 2px rgba(0, 0, 0, 0.6); */
+}
+.project-img:hover img {
+    transform: scale(1.1);
+    transition: transform 0.5s ease-in-out;
+  }
+.project-details{
+  margin-top: 1vh;
+  width: 60vw;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4); /* Transparent black shadow */
+  border-radius: 18px;
+  padding: 0 20px;
+  margin-left: 2vw;
+  /* background-color: blue; */
+
+}
+.project-details h3{
+  font-size: 3.2em;
+  color: rgb(73, 36, 121);
+  margin-bottom: -.5vh;
+}
+.project-details span{
+  font-size: 1.2em;
+  color:#530dd6
+}
+@media (max-width:650px) {
+  #projects{
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5vh;
+  }
+  .arr{
+    display: none;
+  }
+  .project{
+    /* gap: 50%; */
+  }
+  .project-details{
+    /* margin-top: -10vh; */
+    width: 100%;
+    padding: 0 5px;
+    position: absolute;
+    top: 33%;
+  }
+  .project0{
+    position: relative;
+    flex-direction: column;
+    height: 110vh;
+  }
+  .project1{
+    flex-direction: column;
+    position: relative;
+    height: 110vh;
+  }
+}
+.project .project0{
+  /* background-color:#ffe4e1; */
+  display: flex;
+  justify-content: space-between;
+  width: 90vw;
+  margin-top: 5vh;
+  box-shadow: 8px 17px 38px 12px rgba(80, 56, 136, 0.8);
+  border-radius: 20px;
+  margin-left: 3vw;
+  /* align-items: start; */
+}
+.slide{
+    transition: 1s ease-in-out 1s;
+}
+
+.project .project1{
+  /* background-color:#ffe4e1; */
+  display: flex;
+  justify-content: space-between;
+  width: 90vw;
+  margin-top: 5vh;
+  box-shadow: 8px 17px 38px 12px rgba(236, 35, 35, 0.8);
+  border-radius: 20px;
+  /* align-items: start; */
+}
+
+#projects:nth-child(0){
+  margin-left: 2vw;
+
+}
+#projects{
+  overflow-x: hidden;
+  transition: 1s;
+  padding: 0 1vw;
+  /* width: 100%; */
+  align-items: center;
+  justify-content: space-between;
+  display: flex;
+  gap: 10vw;
+}
+.arr{
+  position: absolute;
+  padding:2em;
+  background-color: #1c4f5c;
+  box-shadow: 8px 5px 3px 2px rgba(44, 49, 49, 0.8);
+  border-radius: 100%;
+  cursor: pointer;
+  top: 20%;
+  transition: transform 0.5s;
+}
+.arr img:hover{
+  transform: scale(1.5);
+}
+.prev{
+  
+  left: 2%;
+  rotate: 180deg;
+}
+.prev:hover{
+  background-color: #434b74;
+}
+
+
+.next{
+  right: 2%;
+}
+.next:hover{
+  background-color: #434b74;
 }
